<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hwt905_ros_driver</name>
  <version>0.0.0</version>
  <description>The hwt905 ros driver package</description>
  <maintainer email="linux@todo.todo">linux</maintainer>
  <maintainer email="xxlshi@outlook.com">xxlshi</maintainer>
  <license>Apache License 2.0 </license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
